--- a/src/app/Components/WhyMasarra/WhyMasarra.css
+++ b/src/app/Components/WhyMasarra/WhyMasarra.css
@@ -88,6 +88,7 @@
   .WhyMasarra > p {
     font-size: 1.2rem;
     text-align: center;
+    padding: 0 10px;
   }
   .WhyMasarra_item > p {
     font-size: 1rem;
