--- a/src/app/Components/Hero/Hero.css
+++ b/src/app/Components/Hero/Hero.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap");
+
 .hero {
   width: 100%;
   height: 100vh;
@@ -51,7 +53,9 @@
     left: 70%;
     bottom: 20%;
     transform: rotate(-20deg);
-    font-size: 3rem;
+    font-size: 5rem;
+    color: rgb(228, 104, 59);
+    font-family: "Dancing Script", "Segoe Script", cursive;
   }
   .hero-content > p {
     font-weight: bold;
@@ -84,7 +88,7 @@
     .hero-content {
       left: 1rem;
       right: 1rem;
-      bottom: 20%;
+      bottom: 35%;
     }
 
     .hero-content > h1 {
@@ -96,8 +100,8 @@
     .hero-content > h1 > span {
       transform: rotate(-15deg);
       margin-left: 0.35rem;
-      color: #000;
-      font-size: 1.5rem;
+      color: rgb(228, 104, 59);
+      font-size: 2rem;
     }
 
     .hero-content > p {
