--- a/src/app/Components/SliderSection/SliderSection.css
+++ b/src/app/Components/SliderSection/SliderSection.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap");
+
 .SliderSection {
   width: 100%;
   height: 100vh;
@@ -69,9 +71,15 @@
 }
 .slider_item > h1 {
   font-size: 4rem;
+  padding: 0;
+  margin: 0;
 }
 .slider_item > p {
-  font-size: 2rem;
+  font-size: 3rem;
+  font-family: "Dancing Script", "Segoe Script", cursive;
+  color: rgb(228, 104, 59);
+  font-weight: bold;
+  margin-top: -15px;
 }
 .slider_item > .item_content {
   display: flex;
