--- a/src/app/Components/WhyMasarra/WhyMasarra.css
+++ b/src/app/Components/WhyMasarra/WhyMasarra.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap");
+
 .WhyMasarra {
   width: 100%;
   height: 100vh;
@@ -11,6 +13,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-attachment: fixed;
+  background-blend-mode: multiply;
 }
 .WhyMasarra > h1 {
   font-size: 4rem;
@@ -20,6 +24,9 @@
 .WhyMasarra > p {
   font-size: 2.5rem;
   z-index: 3;
+  font-family: "Dancing Script", "Segoe Script", cursive;
+  color: rgb(228, 104, 59);
+  font-weight: bold;
 }
 .WhyMasarra_content {
   margin-top: 2rem;
